Fixing Minors z-index Bugs

--- a/index.scss
+++ b/index.scss
@@ -132,7 +132,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 11;
 }
 
 .row {
